# simple_link-rs

./: Cargo.toml  fix_litcrypt.sh  fix_litcrypt_vscode.txt
src/: lib.rs
